@@ -3,6 +3,8 @@ CHANGES IN FLTK 1.3.5					RELEASED: ??? ?? 2017
 
 Bug fixes and other improvements
 
+	- Fix a MinGW build error with new MinGW versions as of Feb 2018
+	  (undefined S_OK and __FD_ISSET), see STR #3454.
 	- Windows/CMake: Add missing definition of WIN32 for Windows builds.
 	  This seems to be necessary for VS2017 and other compilers that
 	  don't #define WIN32, but FLTK relies on this preprocessor macro.
